--- a/site/public/style/page/edit.css
+++ b/site/public/style/page/edit.css
@@ -10,3 +10,11 @@
     background-color: #f2f2f2;
     padding: 10px;
 }
+
+.component-form {
+    padding-top: 10px;
+}
+
+.form-top .control-label {
+    padding-top: 8px;
+}
