--- a/site/views/page/edit.html
+++ b/site/views/page/edit.html
@@ -20,10 +20,10 @@ var app = {
 <script id="component-entry-template" type="text/x-handlebars-template">
 {% raw %}
 <div class="component-entry">
-    <h4 class="section-header">Section {{ sectionName }}</h4>
+    <!-- <h4 class="section-header">Section {{ sectionName }}</h4> -->
     <div data-section="{{ sectionName }}" class="component-form">
         <div class="form-group">
-            <label>Module</label>
+            <label>Module Name</label>
             <input type="text" class="form-control" name="module" value="{{ widgetInfo.module }}" placeholder="example: article">
         </div>
         <div class="form-group">
@@ -53,17 +53,17 @@ var app = {
         </h4>
     </div>
     
-    <div class="row" style="margin-top:20px;">
+    <div class="row" style="margin-top:20px;border-bottom: solid 1px #f2f2f2;">
         <div class="col-md-4">
-            <div class="form-group row">
-                <label for="pageName" class="col-sm-4 control-label">Name</label>
+            <div class="form-group form-top row">
+                <label for="pageName" class="col-sm-2 control-label">Name</label>
                 <div class="col-sm-8">
                     <input type="text" class="form-control" id="pageName" value="{{ page.pageObject.name }}" READONLY />
                 </div>
             </div>
         </div>
         <div class="col-md-4">
-            <div class="form-group row">
+            <div class="form-group form-top row">
                 <label for="pageComposition" class="col-sm-4 control-label">Composition</label>
                 <div class="col-sm-8">
                     <input type="text" class="form-control" id="pageComposition" READONLY />
@@ -71,18 +71,19 @@ var app = {
             </div>
         </div>
         <div class="col-md-4">
-            <div class="form-group row">
+            <div class="form-group form-top row">
                 <button class="btn btn-success btn-save-page pull-right">Save Page</button>
             </div>
         </div>
     </div>
     
-    <div class="row" style="margin-top:20px;">
+    <div class="row" style="margin-top:10px;">
         <div class="col-md-3">
             <h4>Sections</h4>
             <div class="section-container"></div>
         </div>
         <div class="col-md-9">
+            <h4>Content</h4>
             <div class="block-container"></div>
         </div>
     </div>
