admin index page layout update

--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -20,10 +20,13 @@
             <div class="section">
                 <h4>System Module</h4>
                 <div>
-                    <a href="/files">File</a>
+                    <a href="/modules/user/list">User</a>
                 </div>
                 <div>
-                    <a href="/users">User</a>
+                    <a href="/modules/group/list">Group</a>
+                </div>
+                <div>
+                    <a href="/modules/page/list">Page</a>
                 </div>
             </div>
         </div>
@@ -31,28 +34,28 @@
             <div class="section">
                 <h4>Module List</h4>
                 <div>
-                    <a href="/modules/user/list">User List</a>
+                    <a href="/modules/article/list">Article</a>
                 </div>
                 <div>
-                    <a href="/modules/group/list">Group List</a>
+                    <a href="/modules/composition/list">Composition</a>
                 </div>
                 <div>
-                    <a href="/modules/composition/list">Composition List</a>
+                    <a href="/modules/item/list">Item</a>
                 </div>
                 <div>
-                    <a href="/modules/page/list">Page List</a>
-                </div>
-                <div>
-                    <a href="/modules/linkset/list">Linkset List</a>
-                </div>
-                <div>
-                    <a href="/modules/article/list">Article List</a>
+                    <a href="/modules/linkset/list">Linkset</a>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
             <div class="section">
-                <h4>User Module</h4>
+                <h4>Test</h4>
+                <div>
+                    <a href="/files">File</a>
+                </div>
+                <div>
+                    <a href="/users">User</a>
+                </div>
                 <div>
                     <a href="/announcements">Announcement</a>
                 </div>
