--- a/site/views/page/edit.html
+++ b/site/views/page/edit.html
@@ -10,8 +10,8 @@
 <script src="/library/handlebars/handlebars.min.js"></script>
 <script>
 var app = {
-    mode: "edit",
-    pageName:"{{ page.pageObject.name }}",
+    mode: "{{ page.mode }}",
+    pageName:"{{ page.pageObject.name }}" || "{{ page.name }}",
     pageData: {{ page.pageObject|json|raw }}
 };
 </script>
@@ -20,7 +20,6 @@ var app = {
 <script id="component-entry-template" type="text/x-handlebars-template">
 {% raw %}
 <div class="component-entry">
-    <!-- <h4 class="section-header">Section {{ sectionName }}</h4> -->
     <div data-section="{{ sectionName }}" class="component-form">
         <div class="form-group">
             <label>Module Name</label>
@@ -58,7 +57,7 @@ var app = {
             <div class="form-group form-top row">
                 <label for="pageName" class="col-sm-2 control-label">Name</label>
                 <div class="col-sm-8">
-                    <input type="text" class="form-control" id="pageName" value="{{ page.pageObject.name }}" READONLY />
+                    <input type="text" class="form-control" id="pageName" value="{{ page.pageObject.name }}" />
                 </div>
             </div>
         </div>
@@ -66,13 +65,21 @@ var app = {
             <div class="form-group form-top row">
                 <label for="pageComposition" class="col-sm-4 control-label">Composition</label>
                 <div class="col-sm-8">
-                    <input type="text" class="form-control" id="pageComposition" READONLY />
+                    {% if page.mode == "edit" %}
+                    <input type="text" class="form-control" id="pageComposition" />
+                    {% endif %}
+                    {% if page.mode == "add" %}
+                    <select class="form-control composition-select"></select>
+                    {% endif %}
                 </div>
             </div>
         </div>
         <div class="col-md-4">
             <div class="form-group form-top row">
-                <button class="btn btn-success btn-save-page pull-right">Save Page</button>
+                <button class="btn btn-info btn-save-page pull-right">Save Page</button>
+                {% if page.mode == "edit" %}
+                <button class="btn btn-info btn-view-page pull-right" style="margin-right:5px;">View Page</button>
+                {% endif %}
             </div>
         </div>
     </div>
