--- a/site/views/composition/theone.html
+++ b/site/views/composition/theone.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="/component/article/detail.css"/>
 <link rel="stylesheet" href="/component/linkset/detail.css"/>
 <link rel="stylesheet" href="/component/cabinet/cabinet.css"/>
+<link rel="stylesheet" href="/component/graph/bartest.css"/>
 <style>
 .widget-container {
 }
@@ -22,6 +23,7 @@
 <script type="text/jsx" src="/component/article/detail.js"></script>
 <script type="text/jsx" src="/component/linkset/detail.js"></script>
 <script type="text/jsx" src="/component/cabinet/cabinet.js"></script>
+<script type="text/jsx" src="/component/graph/bartest.js"></script>
 <script type="text/jsx" src="/script/page/support.js"></script>
 
 <script type="text/jsx">
@@ -30,7 +32,6 @@ app.pageContent = {{ page.pageData.content|json|safe}};
 app.pageComposition = {{ page.compositionData|json|safe}};
 </script>
 <script type="text/jsx" src="/script/composition/render.js"></script>
-<script type="text/jsx" src="/script/composition/sidenav.js"></script>
 {% endblock %}
 
 {% block content %}
