--- a/site/views/composition/theone.html
+++ b/site/views/composition/theone.html
@@ -11,11 +11,20 @@
 <style>
 .widget-container {
 }
+.reactlet-graph {
+    padding: 5px;
+    border: solid 1px #f2f2f2;
+}
+.reactlet-graph div {
+    background-color: #f2f2f2;
+    border-bottom: solid 1px #ccc;
+}
 </style>
 {% endblock %}
 
 {% block script %}
 {% parent %}
+<script src="/library/d3/d3.min.js"></script>
 <script src="/library/react/react.js"></script>
 <script src="/library/react/JSXTransformer.js"></script>
 <script type="text/jsx" src="/component/common/common-mixin.js"></script>
