--- a/site/views/composition/theone.html
+++ b/site/views/composition/theone.html
@@ -24,9 +24,10 @@
 
 {% block script %}
 {% parent %}
-<script src="/library/d3/d3.min.js"></script>
 <script src="/library/react/react.js"></script>
 <script src="/library/react/JSXTransformer.js"></script>
+<script src="/library/d3/d3.min.js"></script>
+<script src="/library/react-d3-components/react-d3-components.min.js"></script>
 <script type="text/jsx" src="/component/common/common-mixin.js"></script>
 <script type="text/jsx" src="/component/item/detail.js"></script>
 <script type="text/jsx" src="/component/article/detail.js"></script>
