barplot js and css files added

--- a/site/views/composition/theone.html
+++ b/site/views/composition/theone.html
@@ -6,8 +6,9 @@
 <link rel="stylesheet" href="/component/item/detail.css"/>
 <link rel="stylesheet" href="/component/article/detail.css"/>
 <link rel="stylesheet" href="/component/linkset/detail.css"/>
-<link rel="stylesheet" href="/component/cabinet/cabinet.css"/>
 <link rel="stylesheet" href="/component/graph/bartest.css"/>
+<link rel="stylesheet" href="/component/graph/barplot.css"/>
+<link rel="stylesheet" href="/component/cabinet/cabinet.css"/>
 <style>
 .widget-container {
 }
@@ -33,6 +34,7 @@
 <script type="text/jsx" src="/component/article/detail.js"></script>
 <script type="text/jsx" src="/component/linkset/detail.js"></script>
 <script type="text/jsx" src="/component/graph/bartest.js"></script>
+<script type="text/jsx" src="/component/graph/barplot.js"></script>
 <script type="text/jsx" src="/component/cabinet/cabinet.js"></script>
 <script type="text/jsx" src="/script/page/support.js"></script>
 
