--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -80,6 +80,9 @@
                 <div>
                     <a href="/pages">Pages</a>
                 </div>
+                <div>
+                    <a href="/map/leaflet_react">Leaflet map (react)</a>
+                </div>
             </div>
         </div>
     </div>
