pagename-edit-route

--- a/site/views/page/list.html
+++ b/site/views/page/list.html
@@ -55,6 +55,7 @@
                     </td>
                     <td>
                         <a class="glyphicon glyphicon-edit" href="/pages/{{eachPage._id.toString()}}/edit" title="edit"></a>
+                        <a class="glyphicon glyphicon-edit" href="/pages/{{eachPage.name}}/edit_by_name" title="edit_by_name"></a>
                     </td>
                 </tr>
                 {% endfor %}
