--- a/site/views/page/edit.html
+++ b/site/views/page/edit.html
@@ -21,21 +21,27 @@ var app = {
 {% raw %}
 <div class="component-entry">
     <div data-section="{{ sectionName }}" class="component-form">
-        <div class="form-group">
-            <label>Module Name</label>
-            <input type="text" class="form-control" name="module" value="{{ widgetInfo.module }}" placeholder="example: article">
+        <h4 class="label label-primary">Display Info</h4>
+        <div class="well">
+            <div class="form-group">
+                <label>UI Component</label>
+                <input type="text" class="form-control" name="component" value="{{ widgetName }}" placeholder="example: ArticleDetail">
+            </div>
         </div>
-        <div class="form-group">
-            <label>UI Component</label>
-            <input type="text" class="form-control" name="component" value="{{ widgetName }}" placeholder="example: ArticleDetail">
-        </div>
-        <div class="form-group">
-            <label>Condition</label>
-            <textarea class="form-control" name="condition" placeholder="example: { &quot;title&quot;:&quot;my title&quot; }">{{ widgetInfo.condition }}</textarea>
-        </div>
-        <div class="form-group">
-            <label>Filter</label>
-            <textarea class="form-control" name="filter" placeholder="example: { &quot;limit&quot;: 2 }">{{ widgetInfo.filter }}</textarea>
+        <h4 class="label label-primary">Data Info</h4>
+        <div class="well">
+            <div class="form-group">
+                <label>Module Name</label>
+                <input type="text" class="form-control" name="module" value="{{ widgetInfo.module }}" placeholder="example: article">
+            </div>
+            <div class="form-group">
+                <label>Data Query</label>
+                <textarea class="form-control" name="condition" placeholder="example: { &quot;title&quot;:&quot;my title&quot; }">{{ widgetInfo.condition }}</textarea>
+            </div>
+            <div class="form-group">
+                <label>Data Filter</label>
+                <textarea class="form-control" name="filter" placeholder="example: { &quot;limit&quot;: 2 }">{{ widgetInfo.filter }}</textarea>
+            </div>
         </div>
     </div>
 </div>
@@ -48,7 +54,12 @@ var app = {
     
     <div class="row">
         <h4 class="col-md-12">
+            {% if page.mode == "edit" %}
             Edit Page
+            {% endif %}
+            {% if page.mode == "add" %}
+            Add Page
+            {% endif %}
         </h4>
     </div>
     
@@ -90,7 +101,7 @@ var app = {
             <div class="section-container"></div>
         </div>
         <div class="col-md-9">
-            <h4>Content</h4>
+            <!-- <h4>Content</h4> -->
             <div class="block-container"></div>
         </div>
     </div>
