--- a/site/public/style/page/edit.css
+++ b/site/public/style/page/edit.css
@@ -15,6 +15,10 @@
     /* padding-top: 10px; */
 }
 
+.form-top {
+    margin-right: 0px;
+}
+
 .form-top .control-label {
     padding-top: 8px;
 }
