access module added

--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -20,6 +20,9 @@
             <div class="section">
                 <h4>System Module</h4>
                 <div>
+                    <a href="/modules/access/list">Access</a>
+                </div>
+                <div>
                     <a href="/modules/user/list">User</a>
                 </div>
                 <div>
