admin index page update

--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -18,7 +18,18 @@
     <div class="row">
         <div class="col-md-4">
             <div class="section">
-                <h4>System Module</h4>
+                <h4>Module Page</h4>
+                <div>
+                    <a href="/files">File</a>
+                </div>
+                <div>
+                    <a href="/users">User</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="section">
+                <h4>System Module List</h4>
                 <div>
                     <a href="/modules/access/list">Access</a>
                 </div>
@@ -28,11 +39,7 @@
                 <div>
                     <a href="/modules/group/list">Group</a>
                 </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="section">
-                <h4>Module List</h4>
+                <h4>User Module List</h4>
                 <div>
                     <a href="/modules/article/list">Article</a>
                 </div>
@@ -53,12 +60,6 @@
         <div class="col-md-4">
             <div class="section">
                 <h4>Test</h4>
-                <div>
-                    <a href="/files">File</a>
-                </div>
-                <div>
-                    <a href="/users">User</a>
-                </div>
                 <div>
                     <a href="/announcements">Announcement</a>
                 </div>
