add link to access home in admin index

--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -25,6 +25,9 @@
                 <div>
                     <a href="/users">User</a>
                 </div>
+                <div>
+                    <a href="/access">Access</a>
+                </div>
             </div>
         </div>
         <div class="col-md-4">
