--- a/site/views/access/add.html
+++ b/site/views/access/add.html
@@ -4,15 +4,11 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h4>Access Home</h4>
+            <h4>Add Access</h4>
         </div>
     </div>
     <div class="row">
         <div class="col-md-12">
-            <ul class="userbuttons">
-                <li><a href="/access/add">Add Access</a></li>
-                <li><a href="/modules/access/list">Access List</a></li>
-            </ul>
         </div>
     </div>
 </div>
