--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -88,7 +88,7 @@
                     <a href="/pages">Pages</a>
                 </div>
                 <div>
-                    <a href="/map/leaflet_react">Leaflet map (react)</a>
+                    <a href="/map/leaflet_react">Leaflet map (test)</a>
                 </div>
             </div>
         </div>
