text update on admin index page

--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -18,7 +18,7 @@
     <div class="row">
         <div class="col-md-4">
             <div class="section">
-                <h4>Module Page</h4>
+                <h4>Module Support Pages</h4>
                 <div>
                     <a href="/files">File</a>
                 </div>
