page direct examples added in page index page

--- a/site/views/page/index.html
+++ b/site/views/page/index.html
@@ -25,6 +25,23 @@
             </ul>
         </div>
         <div class="col-md-6">
+            <ul>
+                <li>
+                    <a href='/pages/show/direct?composition=theone&pagedata={"r1c1":[{"widgetName":"GraphBarchart","widgetInfo":{"module":"item","condition":{"name":"barchart"},"filter":""}}]}'>
+                        Page direct show - with page data
+                    </a>
+                </li>
+                <li>
+                    <a href='/pages/show/direct?composition=theone&widgetname=GraphBarchart&widgetdata={"label":"plot1","values":[{"x":"Class A","y":8},{"x":"Class B","y":4},{"x":"Class C","y":6},{"x":"Class D","y":3}]}'>
+                        Page direct show - with widget data
+                    </a>
+                </li>
+                <li>
+                    <a href='/pages/show/direct?composition=theone&widgetname=GraphBarchart&widgetdata={"label":"plot2","values":[{"x":"School 1","y":3},{"x":"School 2","y":5},{"x":"School 3","y":8}]}'>
+                        Page direct show - with widget data (2)
+                    </a>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
