--- a/site/views/composition/theone.html
+++ b/site/views/composition/theone.html
@@ -46,12 +46,18 @@ app.pageComposition = {{ page.compositionData|json|safe}};
 
 {% block content %}
 <div class="container">
-    
+    <div class="row" style="min-height:40px;">
+    </div>
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-3">
+        </div>
+        <div class="col-md-6">
             <div class="r1c1 widget-container"></div>
         </div>
+        <div class="col-md-3">
+        </div>
     </div>
-    
+    <div class="row" style="min-height:30px;">
+    </div>
 </div>
 {% endblock %}
