--- a/site/views/page/edit.html
+++ b/site/views/page/edit.html
@@ -56,24 +56,11 @@ var app = {
 {% block content %}
 <div class="container" style="min-height:420px;">
     
-    <!--
-    <div class="row">
-        <h4 class="col-md-12">
-            {% if page.mode == "edit" %}
-            Edit Page
-            {% endif %}
-            {% if page.mode == "add" %}
-            Add Page
-            {% endif %}
-        </h4>
-    </div>
-    -->
-    
     <div class="row" style="margin-top:20px;border-bottom: solid 1px #f2f2f2;">
         <div class="col-md-4">
             <div class="form-group form-top row">
-                <label for="pageName" class="col-sm-4 control-label">Page Name</label>
-                <div class="col-sm-6">
+                <label for="pageName" class="col-sm-3 control-label">Name</label>
+                <div class="col-sm-8">
                     <input type="text" class="form-control" id="pageName" value="{{ page.pageObject.name }}" />
                 </div>
             </div>
@@ -81,7 +68,7 @@ var app = {
         <div class="col-md-4">
             <div class="form-group form-top row">
                 <label for="pageComposition" class="col-sm-4 control-label">Composition</label>
-                <div class="col-sm-6">
+                <div class="col-sm-8">
                     {% if page.mode == "edit" %}
                     <input type="text" class="form-control" id="pageComposition" />
                     {% endif %}
@@ -104,11 +91,13 @@ var app = {
     <div class="row" style="margin-top:10px;">
         <div class="col-md-3">
             <h4>Sections</h4>
-            <div class="section-container"></div>
+            <div class="section-container">
+                <p class="text-muted">no section to display</p>
+            </div>
         </div>
         <div class="col-md-9">
-            <!-- <h4>Content</h4> -->
-            <div class="block-container"></div>
+            <div class="block-container">
+            </div>
         </div>
     </div>
     
