added blackbootheader to composition files

--- a/site/views/composition/sidenav.html
+++ b/site/views/composition/sidenav.html
@@ -3,6 +3,7 @@
 {% block style %}
 {% parent %}
 <link rel="stylesheet" href="/component/common/common-style.css"/>
+<link rel="stylesheet" href="/component/header/blackboot.css"/>
 <link rel="stylesheet" href="/component/item/detail.css"/>
 <link rel="stylesheet" href="/component/article/detail.css"/>
 <link rel="stylesheet" href="/component/linkset/detail.css"/>
@@ -20,7 +21,9 @@
 {% parent %}
 <script src="/library/react/react.js"></script>
 <script src="/library/react/JSXTransformer.js"></script>
+<script src="/library/react-d3-components/react-d3-components.min.js"></script>
 <script type="text/jsx" src="/component/common/common-mixin.js"></script>
+<script type="text/jsx" src="/component/header/blackboot.js"></script>
 <script type="text/jsx" src="/component/item/detail.js"></script>
 <script type="text/jsx" src="/component/article/detail.js"></script>
 <script type="text/jsx" src="/component/linkset/detail.js"></script>
