--- a/site/views/composition/theone.html
+++ b/site/views/composition/theone.html
@@ -51,15 +51,11 @@ app.pageComposition = {{ page.compositionData|json|safe}};
 
 {% block content %}
 <div class="container">
-    <div class="row" style="min-height:40px;">
+    <div class="row" style="min-height:20px;">
     </div>
     <div class="row">
-        <div class="col-md-3">
-        </div>
-        <div class="col-md-6">
+        <div class="col-md-12" style="border:solid 1px #f2f2f2;">
             <div class="r1c1 widget-container"></div>
-        </div>
-        <div class="col-md-3">
         </div>
     </div>
     <div class="row" style="min-height:30px;">
