--- a/site/views/page/index.html
+++ b/site/views/page/index.html
@@ -25,30 +25,40 @@
             </ul>
         </div>
         <div class="col-md-6">
+            <p>Page show - header component</p>
+            <ul>
+                <li>
+                    <a href='/pages/show/direct?composition=theone&widgetname=BlackbootHeader&widgetdata={}'>
+                        Blackboot header without data
+                    </a>
+                </li>
+            </ul>
+            <br/>
+            <p>Page show - graphic component</p>
             <ul>
                 <li>
                     <a href='/pages/show/direct?composition=theone&widgetname=GraphBarchart&widgetdata={"label":"plot1","values":[{"x":"Class A","y":8},{"x":"Class B","y":4},{"x":"Class C","y":6},{"x":"Class D","y":3}]}'>
-                        Page direct show - with widget data for BarChart
+                        BarChart
                     </a>
                 </li>
                 <li>
                     <a href='/pages/show/direct?composition=theone&widgetname=GraphPiechart&widgetdata={"label":"plot2","values":[{"x":"School 1","y":3},{"x":"School 2","y":5},{"x":"School 3","y":8}]}'>
-                        Page direct show - with widget data for PieChart
+                        PieChart
                     </a>
                 </li>
                 <li>
                     <a href='/pages/show/direct?composition=theone&widgetname=GraphScatterplot&widgetdata=[{"label": "ClassA","values": [{"x": 0, "y": 2}, {"x": 1.3, "y": 5}, {"x": 3, "y": 6}, {"x": 3.5, "y": 6.5},{"x": 4, "y": 6}, {"x": 4.5, "y": 6}, {"x": 5, "y": 7}, {"x": 5.5, "y": 8}]}]'>
-                        Page direct show - with widget data for ScatterPlot
+                        ScatterPlot
                     </a>
                 </li>
                 <li>
                     <a href='/pages/show/direct?composition=theone&widgetname=GraphLinechart&widgetdata=[{"label": "ClassA","values": [{"x": 0, "y": 2}, {"x": 1.3, "y": 5}, {"x": 3, "y": 6}, {"x": 3.5, "y": 6.5},{"x": 4, "y": 6}, {"x": 4.5, "y": 6}, {"x": 5, "y": 7}, {"x": 5.5, "y": 8}]}]'>
-                        Page direct show - with widget data for LineChart
+                        LineChart
                     </a>
                 </li>
                 <li>
                     <a href='/pages/show/direct?composition=theone&widgetname=GraphAreachart&widgetdata=[{"label": "ClassA","values": [{"x": 0, "y": 2}, {"x": 1.3, "y": 5}, {"x": 3, "y": 6}, {"x": 3.5, "y": 6.5},{"x": 4, "y": 6}, {"x": 4.5, "y": 6}, {"x": 5, "y": 7}, {"x": 5.5, "y": 8}]}]'>
-                        Page direct show - with widget data for AreaChart
+                        AreaChart
                     </a>
                 </li>
             </ul>
