blackboot footer example link added in page index

--- a/site/views/page/index.html
+++ b/site/views/page/index.html
@@ -32,6 +32,11 @@
                         Blackboot header without data
                     </a>
                 </li>
+                <li>
+                    <a href='/pages/show/direct?composition=theone&widgetname=BlackbootFooter&widgetdata={}'>
+                        Blackboot footer without data
+                    </a>
+                </li>
             </ul>
             <br/>
             <p>Page show - graphic component</p>
