--- a/site/public/component/header/blackboot_header.css
+++ b/site/public/component/header/blackboot_header.css
@@ -1,3 +1,5 @@
-.blackbootheader-container .blackbootheader-content {
-    /* padding-bottom: 25px; */
+.blackbootheader-container .header-container {
+    padding-left: 20px;
+    padding-right: 20px;
 }
+
