blackboot header example with data - added

--- a/site/views/page/index.html
+++ b/site/views/page/index.html
@@ -33,6 +33,11 @@
                     </a>
                 </li>
                 <li>
+                    <a href='/pages/show/direct?composition=theone&widgetname=BlackbootHeader&widgetdata={"title":"ReactCMS"}'>
+                        Blackboot header with data
+                    </a>
+                </li>
+                <li>
                     <a href='/pages/show/direct?composition=theone&widgetname=BlackbootFooter&widgetdata={}'>
                         Blackboot footer without data
                     </a>
