blackboot header update - mainLinks rendered

--- a/site/views/page/index.html
+++ b/site/views/page/index.html
@@ -38,6 +38,11 @@
                     </a>
                 </li>
                 <li>
+                    <a href='/pages/show/direct?composition=theone&widgetname=BlackbootHeader&widgetdata={"title":"CMS","mainLinks":[{"link":"/","text":"HOME"}]}'>
+                        Blackboot header with data 2
+                    </a>
+                </li>
+                <li>
                     <a href='/pages/show/direct?composition=theone&widgetname=BlackbootFooter&widgetdata={}'>
                         Blackboot footer without data
                     </a>
