sideLinks added to rendering

--- a/site/views/page/index.html
+++ b/site/views/page/index.html
@@ -43,6 +43,11 @@
                     </a>
                 </li>
                 <li>
+                    <a href='/pages/show/direct?composition=theone&widgetname=BlackbootHeader&widgetdata={"title":"CMS","mainLinks":[{"link":"/","text":"HOME"}],"sideLinks":[{"link":"/contact","text":"CONTACT"},{"link":"/about","text":"ABOUT"}]}'>
+                        Blackboot header with data 3
+                    </a>
+                </li>
+                <li>
                     <a href='/pages/show/direct?composition=theone&widgetname=BlackbootFooter&widgetdata={}'>
                         Blackboot footer without data
                     </a>
