blackboot footer updated with examples

--- a/site/views/page/index.html
+++ b/site/views/page/index.html
@@ -47,9 +47,20 @@
                         Blackboot header with data 3
                     </a>
                 </li>
+                <br/>
                 <li>
                     <a href='/pages/show/direct?composition=theone&widgetname=BlackbootFooter&widgetdata={}'>
                         Blackboot footer without data
+                    </a>
+                </li>
+                <li>
+                    <a href='/pages/show/direct?composition=theone&widgetname=BlackbootFooter&widgetdata={"primaryLinks":[{"link":"/","text":"HOME"}]}'>
+                        Blackboot footer with data 1
+                    </a>
+                </li>
+                <li>
+                    <a href='/pages/show/direct?composition=theone&widgetname=BlackbootFooter&widgetdata={"primaryLinks":[{"link":"/","text":"HOME"}],"secondaryLinks":[{"link":"/contact","text":"CONTACT"},{"link":"/about","text":"ABOUT"}]}'>
+                        Blackboot footer with data 2
                     </a>
                 </li>
             </ul>
