--- a/site/public/component/footer/blackboot_footer.css
+++ b/site/public/component/footer/blackboot_footer.css
@@ -1,3 +1,7 @@
 .blackbootfooter-container .blackbootfooter-content {
     /* padding-bottom: 25px; */
 }
+
+.footer-links-secondary ul {
+    font-size: 11px;
+}
