page index page text update

--- a/site/views/page/index.html
+++ b/site/views/page/index.html
@@ -25,7 +25,7 @@
             </ul>
         </div>
         <div class="col-md-6">
-            <p>Page show - header component</p>
+            <p>Page show - header/footer components</p>
             <ul>
                 <li>
                     <a href='/pages/show/direct?composition=theone&widgetname=BlackbootHeader&widgetdata={}'>
