--- a/site/views/composition/sidenav.html
+++ b/site/views/composition/sidenav.html
@@ -6,6 +6,7 @@
 
 <link rel="stylesheet" href="/component/header/blackboot_header.css"/>
 <link rel="stylesheet" href="/component/footer/blackboot_footer.css"/>
+<link rel="stylesheet" href="/component/footer/fish_footer.css"/>
 <link rel="stylesheet" href="/component/item/detail.css"/>
 <link rel="stylesheet" href="/component/article/detail.css"/>
 <link rel="stylesheet" href="/component/linkset/detail.css"/>
@@ -30,6 +31,7 @@
 
 <script type="text/jsx" src="/component/header/blackboot_header.js"></script>
 <script type="text/jsx" src="/component/footer/blackboot_footer.js"></script>
+<script type="text/jsx" src="/component/footer/fish_footer.js"></script>
 <script type="text/jsx" src="/component/item/detail.js"></script>
 <script type="text/jsx" src="/component/article/detail.js"></script>
 <script type="text/jsx" src="/component/linkset/detail.js"></script>
