--- a/site/views/page/index.html
+++ b/site/views/page/index.html
@@ -63,6 +63,11 @@
                         Blackboot footer with data 2
                     </a>
                 </li>
+                <li>
+                    <a href='/pages/show/direct?composition=theone&widgetname=BlackbootFooter&widgetdata={"primaryLinks":[{"link":"/","text":"Home"},{"link":"/","text":"Team"},{"link":"/","text":"Careers"},{"link":"/","text":"Resources"}],"secondaryLinks":[{"link":"/contact","text":"Contact"},{"link":"/about","text":"About Us"}],"tertiaryLinks":[{"link":"/","text":"Facebook"},{"link":"/","text":"Twitter"},{"link":"/","text":"Reddit"}]}'>
+                        Blackboot footer with data 3
+                    </a>
+                </li>
             </ul>
             <br/>
             <p>Page show - graphic component</p>
