--- a/site/public/component/footer/fish_footer.css
+++ b/site/public/component/footer/fish_footer.css
@@ -1,22 +1,13 @@
 
 .fish_footer_container .footer-links {
-    font-size:16px;
+    font-size:17px;
 }
 
 .fish_footer_container {
-    background-color: #BABABA;
+    background-color: #BABABF;
 }
 
 .footer-links {
     color:white;
 }
 
-.fishfooter-llc {
-    font-family: Verdana, Geneva, sans-serif;	
-    color:black;
-}
-
-.fishfooter-llc:hover {
-    text-decoration: underline;
-    color: #898989;
-}
