cleanup on sidenav composition page

--- a/site/views/composition/sidenav.html
+++ b/site/views/composition/sidenav.html
@@ -18,7 +18,7 @@
         </div>
     </div>
     
-    <div class="row" style="margin-top:10px;">
+    <div class="row">
         <div class="col-md-3">
             <div class="r2c1 widget-container"></div>
         </div>
