--- a/site/views/page/edit.html
+++ b/site/views/page/edit.html
@@ -14,6 +14,10 @@ var app = {
     pageName:"{{ page.pageObject.name }}" || "{{ page.name }}",
     pageData: {{ page.pageObject|json|raw }}
 };
+
+Handlebars.registerHelper('json', function(context) {
+    return JSON.stringify(context);
+});
 </script>
 <script src="/script/page/edit.js"></script>
 
@@ -36,7 +40,7 @@ var app = {
         <div class="well">
             <div class="form-group">
                 <label>Data Content</label>
-                <textarea class="form-control" name="widgetdata" value="{{ widgetData }}" placeholder="example: { &quot;title&quot;:&quot;CMS&quot; }">{{ widgetInfo.condition }}</textarea>
+                <textarea class="form-control" name="widgetdata" placeholder="example: { &quot;title&quot;:&quot;CMS&quot; }">{{{ json widgetInfo.data }}}</textarea>
             </div>
         </div>
         <h4 class="pull-right" style="margin-top:0px;">
