--- a/site/views/page/index.html
+++ b/site/views/page/index.html
@@ -73,27 +73,27 @@
             <p>Page show - graphic component</p>
             <ul>
                 <li>
-                    <a href='/pages/show/direct?composition=theone&widgetname=GraphBarchart&widgetdata={"label":"plot1","values":[{"x":"Class A","y":8},{"x":"Class B","y":4},{"x":"Class C","y":6},{"x":"Class D","y":3}]}'>
+                    <a href='/pages/show/direct?composition=theone&widgetname=GraphBarchart&widgetdata={"value":{"label":"plot1","values":[{"x":"Class A","y":8},{"x":"Class B","y":4},{"x":"Class C","y":6},{"x":"Class D","y":3}]}}'>
                         BarChart
                     </a>
                 </li>
                 <li>
-                    <a href='/pages/show/direct?composition=theone&widgetname=GraphPiechart&widgetdata={"label":"plot2","values":[{"x":"School 1","y":3},{"x":"School 2","y":5},{"x":"School 3","y":8}]}'>
+                    <a href='/pages/show/direct?composition=theone&widgetname=GraphPiechart&widgetdata={"value":{"label":"plot2","values":[{"x":"School 1","y":3},{"x":"School 2","y":5},{"x":"School 3","y":8}]}}'>
                         PieChart
                     </a>
                 </li>
                 <li>
-                    <a href='/pages/show/direct?composition=theone&widgetname=GraphScatterplot&widgetdata=[{"label": "ClassA","values": [{"x": 0, "y": 2}, {"x": 1.3, "y": 5}, {"x": 3, "y": 6}, {"x": 3.5, "y": 6.5},{"x": 4, "y": 6}, {"x": 4.5, "y": 6}, {"x": 5, "y": 7}, {"x": 5.5, "y": 8}]}]'>
+                    <a href='/pages/show/direct?composition=theone&widgetname=GraphScatterplot&widgetdata={"value":[{"label": "ClassA","values": [{"x": 0, "y": 2}, {"x": 1.3, "y": 5}, {"x": 3, "y": 6}, {"x": 3.5, "y": 6.5},{"x": 4, "y": 6}, {"x": 4.5, "y": 6}, {"x": 5, "y": 7}, {"x": 5.5, "y": 8}]}]}'>
                         ScatterPlot
                     </a>
                 </li>
                 <li>
-                    <a href='/pages/show/direct?composition=theone&widgetname=GraphLinechart&widgetdata=[{"label": "ClassA","values": [{"x": 0, "y": 2}, {"x": 1.3, "y": 5}, {"x": 3, "y": 6}, {"x": 3.5, "y": 6.5},{"x": 4, "y": 6}, {"x": 4.5, "y": 6}, {"x": 5, "y": 7}, {"x": 5.5, "y": 8}]}]'>
+                    <a href='/pages/show/direct?composition=theone&widgetname=GraphLinechart&widgetdata={"value":[{"label": "ClassA","values": [{"x": 0, "y": 2}, {"x": 1.3, "y": 5}, {"x": 3, "y": 6}, {"x": 3.5, "y": 6.5},{"x": 4, "y": 6}, {"x": 4.5, "y": 6}, {"x": 5, "y": 7}, {"x": 5.5, "y": 8}]}]}'>
                         LineChart
                     </a>
                 </li>
                 <li>
-                    <a href='/pages/show/direct?composition=theone&widgetname=GraphAreachart&widgetdata=[{"label": "ClassA","values": [{"x": 0, "y": 2}, {"x": 1.3, "y": 5}, {"x": 3, "y": 6}, {"x": 3.5, "y": 6.5},{"x": 4, "y": 6}, {"x": 4.5, "y": 6}, {"x": 5, "y": 7}, {"x": 5.5, "y": 8}]}]'>
+                    <a href='/pages/show/direct?composition=theone&widgetname=GraphAreachart&widgetdata={"value":[{"label": "ClassA","values": [{"x": 0, "y": 2}, {"x": 1.3, "y": 5}, {"x": 3, "y": 6}, {"x": 3.5, "y": 6.5},{"x": 4, "y": 6}, {"x": 4.5, "y": 6}, {"x": 5, "y": 7}, {"x": 5.5, "y": 8}]}]}'>
                         AreaChart
                     </a>
                 </li>
