change to same data structure for footer and header components

--- a/site/views/page/index.html
+++ b/site/views/page/index.html
@@ -38,12 +38,12 @@
                     </a>
                 </li>
                 <li>
-                    <a href='/pages/show/direct?composition=theone&widgetname=BlackbootHeader&widgetdata={"title":"CMS","mainLinks":[{"link":"/","text":"HOME"}]}'>
+                    <a href='/pages/show/direct?composition=theone&widgetname=BlackbootHeader&widgetdata={"title":"CMS","links1":[{"link":"/","text":"HOME"}]}'>
                         Blackboot header with data 2
                     </a>
                 </li>
                 <li>
-                    <a href='/pages/show/direct?composition=theone&widgetname=BlackbootHeader&widgetdata={"title":"CMS","mainLinks":[{"link":"/","text":"HOME"}],"sideLinks":[{"link":"/contact","text":"CONTACT"},{"link":"/about","text":"ABOUT"}]}'>
+                    <a href='/pages/show/direct?composition=theone&widgetname=BlackbootHeader&widgetdata={"title":"CMS","links1":[{"link":"/","text":"HOME"}],"links2":[{"link":"/contact","text":"CONTACT"},{"link":"/about","text":"ABOUT"}]}'>
                         Blackboot header with data 3
                     </a>
                 </li>
@@ -54,17 +54,17 @@
                     </a>
                 </li>
                 <li>
-                    <a href='/pages/show/direct?composition=theone&widgetname=BlackbootFooter&widgetdata={"primaryLinks":[{"link":"/","text":"HOME"}]}'>
+                    <a href='/pages/show/direct?composition=theone&widgetname=BlackbootFooter&widgetdata={"links1":[{"link":"/","text":"HOME"}]}'>
                         Blackboot footer with data 1
                     </a>
                 </li>
                 <li>
-                    <a href='/pages/show/direct?composition=theone&widgetname=BlackbootFooter&widgetdata={"primaryLinks":[{"link":"/","text":"HOME"}],"secondaryLinks":[{"link":"/contact","text":"CONTACT"},{"link":"/about","text":"ABOUT"}]}'>
+                    <a href='/pages/show/direct?composition=theone&widgetname=BlackbootFooter&widgetdata={"links1":[{"link":"/","text":"HOME"}],"links2":[{"link":"/contact","text":"CONTACT"},{"link":"/about","text":"ABOUT"}]}'>
                         Blackboot footer with data 2
                     </a>
                 </li>
                 <li>
-                    <a href='/pages/show/direct?composition=theone&widgetname=BlackbootFooter&widgetdata={"primaryLinks":[{"link":"/","text":"Home"},{"link":"/","text":"Team"},{"link":"/","text":"Careers"},{"link":"/","text":"Resources"}],"secondaryLinks":[{"link":"/contact","text":"Contact"},{"link":"/about","text":"About Us"}],"tertiaryLinks":[{"link":"/","text":"Facebook"},{"link":"/","text":"Twitter"},{"link":"/","text":"Reddit"}]}'>
+                    <a href='/pages/show/direct?composition=theone&widgetname=BlackbootFooter&widgetdata={"links1":[{"link":"/","text":"Home"},{"link":"/","text":"Team"},{"link":"/","text":"Careers"},{"link":"/","text":"Resources"}],"links2":[{"link":"/contact","text":"Contact"},{"link":"/about","text":"About Us"}],"links3":[{"link":"/","text":"Facebook"},{"link":"/","text":"Twitter"},{"link":"/","text":"Reddit"}]}'>
                         Blackboot footer with data 3
                     </a>
                 </li>
