--- a/site/views/item/addtest.html
+++ b/site/views/item/addtest.html
@@ -26,10 +26,21 @@
                     <label for="type">Name</label>
                     <input type="text" class="form-control" name="name" />
                 </div>
+                
+                <!--
                 <div class="form-group">
                     <label for="image">Image</label>
                     <input type="file" class="form-control" name="image" />
                 </div>
+                -->
+                
+                <div class="html-file-container" data-reactid=".0.0.0.$image">
+                    <div class="form-group html-file-content-container" data-reactid=".0.0.0.$image.0">
+                        <label data-reactid=".0.0.0.$image.0.0">image</label>
+                        <input type="file" name="image" class="form-control" data-reactid=".0.0.0.$image.0.1">
+                    </div>
+                </div>
+                
                 <div class="form-group">
                     <label for="type">Type</label>
                     <input type="text" class="form-control" name="type" />
