hidden field support added; _id field is added in edit form

--- a/site/views/module/edit.html
+++ b/site/views/module/edit.html
@@ -16,6 +16,7 @@ window.app = {
 };
 </script>
 <script src="/component/reactlet-common/reactlet-mixin.js"></script>
+<script src="/library/jquery.form/jquery.form.min.js"></script>
 <script src="/script/module/dist/edit.js"></script>
 {% endblock %}
 
