admin index page cleanup

--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -16,6 +16,7 @@
 {% block content %}
 <div class="container">
     <div class="row">
+        <!--
         <div class="col-md-4">
             <div class="section">
                 <h4>Module Support Pages</h4>
@@ -30,19 +31,22 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        -->
+        <div class="col-md-6">
             <div class="section">
-                <h4>System Module List</h4>
+                <h4>System</h4>
+                <!--
                 <div>
                     <a href="/modules/access/list">Access</a>
                 </div>
+                -->
                 <div>
                     <a href="/modules/user/list">User</a>
                 </div>
                 <div>
                     <a href="/modules/group/list">Group</a>
                 </div>
-                <h4>User Module List</h4>
+                <h4>User</h4>
                 <div>
                     <a href="/modules/article/list">Article</a>
                 </div>
@@ -60,7 +64,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="section">
                 <h4>Test</h4>
                 <div>
