imageset module update

--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -54,6 +54,9 @@
                     <a href="/modules/composition/list">Composition</a>
                 </div>
                 <div>
+                    <a href="/modules/imageset/list">Imageset</a>
+                </div>
+                <div>
                     <a href="/modules/item/list">Item</a>
                 </div>
                 <div>
