--- a/site/views/composition/vertflow.html
+++ b/site/views/composition/vertflow.html
@@ -10,37 +10,27 @@
 {% endblock %}
 
 {% block content %}
+<div class="container-full-width">
+    <div class="r1c1 widget-container"></div>
+</div>
 <div class="container">
-    
-    <div class="row">
-        <div class="col-md-12">
-            <div class="r1c1 widget-container"></div>
-        </div>
-    </div>
-    
     <div class="row">
         <div class="col-md-12">
             <div class="r2c1 widget-container"></div>
         </div>
     </div>
-    
     <div class="row">
         <div class="col-md-12">
             <div class="r3c1 widget-container"></div>
         </div>
     </div>
-    
     <div class="row">
         <div class="col-md-12">
             <div class="r4c1 widget-container"></div>
         </div>
     </div>
-    
-    <div class="row">
-        <div class="col-md-12">
-            <div class="r5c1 widget-container"></div>
-        </div>
-    </div>
-    
+</div>
+<div class="container-full-width">
+    <div class="r5c1 widget-container"></div>
 </div>
 {% endblock %}
