fix composition data content

--- a/site/views/composition/sidenav.html
+++ b/site/views/composition/sidenav.html
@@ -10,28 +10,30 @@
 {% endblock %}
 
 {% block content %}
+<div class="container-full-width">
+    <div class="r1c1 widget-container"></div>
+</div>
 <div class="container">
-    
     <div class="row">
         <div class="col-md-12">
-            <div class="r1c1 widget-container"></div>
-        </div>
-    </div>
-    
-    <div class="row">
-        <div class="col-md-3">
             <div class="r2c1 widget-container"></div>
         </div>
-        <div class="col-md-9">
-            <div class="r2c2 widget-container"></div>
-        </div>
     </div>
-    
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-3">
             <div class="r3c1 widget-container"></div>
         </div>
+        <div class="col-md-9">
+            <div class="r3c2 widget-container"></div>
+        </div>
     </div>
-    
+    <div class="row">
+        <div class="col-md-12">
+            <div class="r4c1 widget-container"></div>
+        </div>
+    </div>
+</div>
+<div class="container-full-width">
+    <div class="r5c1 widget-container"></div>
 </div>
 {% endblock %}
