--- a/site/public/component/footer/blackboot_footer.css
+++ b/site/public/component/footer/blackboot_footer.css
@@ -1,4 +1,8 @@
-
-.blackbootfooter-container .footer-links {
-    font-size:16px;
+.footer_container {
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
+.footer_container .footer-links {
+    font-size: 14px;
+}
+
