media module update; admin page update

--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -63,6 +63,9 @@
                     <a href="/modules/linkset/list">Linkset</a>
                 </div>
                 <div>
+                    <a href="/modules/media/list">Meida</a>
+                </div>
+                <div>
                     <a href="/modules/page/list">Page</a>
                 </div>
             </div>
