media detail component is working

--- a/site/views/layout/layout-composition.html
+++ b/site/views/layout/layout-composition.html
@@ -21,6 +21,7 @@
 <script type="text/jsx" src="/component/footer/blackboot_footer.js"></script>
 <script type="text/jsx" src="/component/footer/fish_footer.js"></script>
 <script type="text/jsx" src="/component/item/detail.js"></script>
+<script type="text/jsx" src="/component/media/detail.js"></script>
 <script type="text/jsx" src="/component/article/detail.js"></script>
 <script type="text/jsx" src="/component/linkset/detail.js"></script>
 <script type="text/jsx" src="/component/graph/d3graph.js"></script>
@@ -46,6 +47,7 @@ app.pageComposition = {{ page.compositionData|json|safe}};
 <link rel="stylesheet" href="/component/footer/blackboot_footer.css"/>
 <link rel="stylesheet" href="/component/footer/fish_footer.css"/>
 <link rel="stylesheet" href="/component/item/detail.css"/>
+<link rel="stylesheet" href="/component/media/detail.css"/>
 <link rel="stylesheet" href="/component/article/detail.css"/>
 <link rel="stylesheet" href="/component/linkset/detail.css"/>
 <link rel="stylesheet" href="/component/graph/d3graph.css"/>
