--- a/site/views/page/edit.html
+++ b/site/views/page/edit.html
@@ -95,6 +95,7 @@ Handlebars.registerHelper('json', function(context) {
             <div class="form-group form-top row">
                 <button class="btn btn-info btn-save-page pull-right">Save Page</button>
                 {% if page.mode == "edit" %}
+                <button class="btn btn-info btn-save-page-as pull-right" style="margin-right:5px;">Save As</button>
                 <button class="btn btn-info btn-view-page pull-right" style="margin-right:5px;">View Page</button>
                 {% endif %}
             </div>
