for vertflow and sitenav composition, move footer to r99c1, expand to r10 for content

--- a/site/views/composition/sidenav.html
+++ b/site/views/composition/sidenav.html
@@ -36,4 +36,19 @@
 <div class="container-full-width">
     <div class="r5c1 widget-container"></div>
 </div>
+<div class="container-full-width">
+    <div class="r6c1 widget-container"></div>
+</div>
+<div class="container-full-width">
+    <div class="r7c1 widget-container"></div>
+</div>
+<div class="container-full-width">
+    <div class="r8c1 widget-container"></div>
+</div>
+<div class="container-full-width">
+    <div class="r9c1 widget-container"></div>
+</div>
+<div class="container-full-width">
+    <div class="r99c1 widget-container"></div>
+</div>
 {% endblock %}
