--- a/site/views/composition/vertflow.html
+++ b/site/views/composition/vertflow.html
@@ -29,21 +29,31 @@
             <div class="r4c1 widget-container"></div>
         </div>
     </div>
-</div>
-<div class="container-full-width">
-    <div class="r5c1 widget-container"></div>
-</div>
-<div class="container-full-width">
-    <div class="r6c1 widget-container"></div>
-</div>
-<div class="container-full-width">
-    <div class="r7c1 widget-container"></div>
-</div>
-<div class="container-full-width">
-    <div class="r8c1 widget-container"></div>
-</div>
-<div class="container-full-width">
-    <div class="r9c1 widget-container"></div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="r5c1 widget-container"></div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="r6c1 widget-container"></div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="r7c1 widget-container"></div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="r8c1 widget-container"></div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="r9c1 widget-container"></div>
+        </div>
+    </div>
 </div>
 <div class="container-full-width">
     <div class="r99c1 widget-container"></div>
