--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -63,7 +63,7 @@
                     <a href="/modules/linkset/list">Linkset</a>
                 </div>
                 <div>
-                    <a href="/modules/media/list">Meida</a>
+                    <a href="/modules/media/list">Media</a>
                 </div>
                 <div>
                     <a href="/modules/page/list">Page</a>
