--- a/site/public/component/article/detail.css
+++ b/site/public/component/article/detail.css
@@ -1,4 +1,6 @@
 .articledetail-container .articledetail-content {
     width: 100%;
     padding-bottom: 25px;
+    padding-right: 0px;
+    padding-left: 0px;
 }
