--- a/site/views/composition/vertflow.html
+++ b/site/views/composition/vertflow.html
@@ -11,6 +11,9 @@
 
 {% block content %}
 <div class="container-full-width">
+    <div class="r0c1 widget-container"></div>
+</div>
+<div class="container-full-width">
     <div class="r1c1 widget-container"></div>
 </div>
 <div class="container">
