adjust theone composition

--- a/site/views/composition/theone.html
+++ b/site/views/composition/theone.html
@@ -19,15 +19,20 @@
 {% endblock %}
 
 {% block content %}
+<div class="container-full-width" style="margin-top:20px;">
+    <div class="r0c1 widget-container"></div>
+</div>
+<div class="container-full-width">
+    <div class="r1c1 widget-container"></div>
+</div>
 <div class="container">
-    <div class="row" style="min-height:20px;">
-    </div>
     <div class="row">
         <div class="col-md-12" style="border:solid 1px #f2f2f2;">
-            <div class="r1c1 widget-container"></div>
+            <div class="r2c1 widget-container"></div>
         </div>
     </div>
-    <div class="row" style="min-height:20px;">
-    </div>
+</div>
+<div class="container-full-width" style="margin-top:20px;">
+    <div class="r99c1 widget-container"></div>
 </div>
 {% endblock %}
