summernote integration is in for module item edit page

--- a/site/views/module/edit.html
+++ b/site/views/module/edit.html
@@ -4,6 +4,7 @@
 {% parent %}
 <link rel="stylesheet" href="/component/reactlet-common/reactlet-common.css" />
 <link rel="stylesheet" href="/component/reactlet-table/dist/table.css" />
+<link rel="stylesheet" href="/library/summernote/summernote.css">
 <link rel="stylesheet" href="/style/module/view.css">
 {% endblock %}
 
@@ -16,6 +17,7 @@ window.app = {
 };
 </script>
 <script src="/component/reactlet-common/reactlet-mixin.js"></script>
+<script src="/library/summernote/summernote.js"></script>
 <script src="/script/module/dist/edit.js"></script>
 {% endblock %}
 
