change header background color

--- a/site/public/component/header/simplify_header.css
+++ b/site/public/component/header/simplify_header.css
@@ -1,6 +1,7 @@
-.simplify-container .header-container {
+.simplifyheader-container .header-container {
     padding-left: 20px;
     padding-right: 20px;
+    background-color: #f2f2f2;
 }
 
 .navbar-brand {
