--- a/site/views/layout/layout-composition.html
+++ b/site/views/layout/layout-composition.html
@@ -20,6 +20,7 @@
 <script type="text/jsx" src="/component/header/blackboot_header.js"></script>
 <script type="text/jsx" src="/component/footer/blackboot_footer.js"></script>
 <script type="text/jsx" src="/component/header/simplify_header.js"></script>
+<script type="text/jsx" src="/component/footer/simplify_footer.js"></script>
 <script type="text/jsx" src="/component/item/detail.js"></script>
 <script type="text/jsx" src="/component/media/detail.js"></script>
 <script type="text/jsx" src="/component/article/detail.js"></script>
@@ -47,6 +48,7 @@ app.pageComposition = {{ page.compositionData|json|safe}};
 <link rel="stylesheet" href="/component/header/blackboot_header.css"/>
 <link rel="stylesheet" href="/component/footer/blackboot_footer.css"/>
 <link rel="stylesheet" href="/component/header/simplify_header.css"/>
+<link rel="stylesheet" href="/component/footer/simplify_footer.css"/>
 <link rel="stylesheet" href="/component/item/detail.css"/>
 <link rel="stylesheet" href="/component/media/detail.css"/>
 <link rel="stylesheet" href="/component/article/detail.css"/>
