added carousel component in cabinet

--- a/site/views/layout/layout-composition.html
+++ b/site/views/layout/layout-composition.html
@@ -26,6 +26,7 @@
 <script type="text/jsx" src="/component/article/detail.js"></script>
 <script type="text/jsx" src="/component/linkset/detail.js"></script>
 <script type="text/jsx" src="/component/graph/d3graph.js"></script>
+<script type="text/jsx" src="/component/carousel/src/carousel.js"></script>
 <script type="text/jsx" src="/component/embed/iframe.js"></script>
 <script type="text/jsx" src="/component/cabinet/cabinet.js"></script>
 
@@ -54,6 +55,7 @@ app.pageComposition = {{ page.compositionData|json|safe}};
 <link rel="stylesheet" href="/component/article/detail.css"/>
 <link rel="stylesheet" href="/component/linkset/detail.css"/>
 <link rel="stylesheet" href="/component/graph/d3graph.css"/>
+<link rel="stylesheet" href="/component/carousel/css/carousel.css"/>
 <link rel="stylesheet" href="/component/embed/iframe.css"/>
 <link rel="stylesheet" href="/component/cabinet/cabinet.css"/>
 {% endblock %}
