--- a/site/views/composition/theone.html
+++ b/site/views/composition/theone.html
@@ -27,8 +27,15 @@
 </div>
 <div class="container">
     <div class="row">
-        <div class="col-md-12" style="border:solid 1px #f2f2f2;">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
             <div class="r2c1 widget-container"></div>
+        </div>
+        <div class="col-md-3"></div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="r3c1 widget-container"></div>
         </div>
     </div>
 </div>
