--- a/site/views/layout/layout-composition.html
+++ b/site/views/layout/layout-composition.html
@@ -9,6 +9,7 @@
 {% block script %}
 <script src="/library/jquery/jquery.min.js"></script>
 <script src="/library/bootstrap/js/bootstrap.min.js"></script>
+<script src="/library/moment/moment.js"></script>
 <script src="/library/underscore/underscore.js"></script>
 <script src="/library/react/react.js"></script>
 <script src="/library/react/JSXTransformer.js"></script>
