gallery page css/js files update

--- a/site/views/composition/gallery.html
+++ b/site/views/composition/gallery.html
@@ -2,6 +2,7 @@
 
 {% block style %}
 {% parent %}
+<link rel="stylesheet" href="/style/composition/gallery.css"/>
 {% endblock %}
 
 {% block script %}
